# emcc-cmake-setup

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeUserPresets.json  README.md  build.ps1  build.sh  build_debug.sh  build_skia.sh  build_wasm.sh  clean.sh  run.sh  server.py  setup.ps1  setup.sh  test.sh
include/: debug.h  debug.hpp  dyn_array_wrapper.hpp  logger.h  logger.hpp  matrix.hpp  timer.hpp  utils.hpp
include/gl/: Canvas.hpp  canvas.hpp  glcanvas.hpp  program.hpp  shader.hpp
include/render/: renderer.hpp
include/util/: mutex.hpp  thread.hpp  threading.hpp
include/utils/: caller.hpp  concept_utils.hpp  cond.hpp  dyn_array_wrapper.hpp  mutex.hpp  promise.hpp  rwlock.hpp  thread.hpp  threading.hpp  timer.hpp
include/utils/threading/: cond.hpp  promise.hpp  rwlock.hpp  thread.hpp
include/vec2/: vec2.h  vec2.hpp
src/: emscripten_bindings.cpp  main.cpp  math.cpp
src/gl/: canvas.cpp  program.cpp  shader.cpp
src/render/: renderer.cpp
src/util/: mutex.cpp  thread.cpp
src/utils/: cond.cpp  mutex.cpp  rwlock.cpp  thread.cpp
src/utils/threading/: cond.cpp  mutex.cpp  rwlock.cpp
src/vec2/: vec2.cpp  vec2.h
test/: allocator.js  canvas.js  index.d.ts  index.html  test.js
